actualización del proyecto Pazafira

--- a/formulario.html
+++ b/formulario.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
+    <link rel="icon" href="imagenes/Logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="Inicio.css">
@@ -71,7 +72,7 @@
         <div class="form-group" style="font-family: 'Akaya Telivigala', cursive">
           <label for="EscogerProducto">Escoge tu producto</label>
           <select class="form-control" id="EscogerProducto">
-            <option>Posillo</option>
+            <option>Pocillo</option>
             <option>Botella</option>
           </select>
         </div>
