union de los proyectos Pazafira

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -30,6 +30,9 @@
               <a class="nav-link colorletras" href="index.html#Producto">Productos</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link colorletras" href="Poesia.html">Poesía</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link colorletras" href="formulario.html">Formulario</a>
             </li>
             <li class="nav-item">
@@ -65,10 +68,15 @@
                 con el tiempo se ha perdido esta hermosa y fundamental
                 forma de expresión artística en nuestra sociedad.
                 <br><br>
-                Queremos incentivar a las personas de diversas edades
-                para que se motiven y exploren acerca de este género
-                literario, para que puedan crear sus propios mensajes
-                inspiradores.<br>
+                <br>
+                Es por eso que queremos promover a través de nuestras botellas de vidrio reutilizables y nuestros posillos
+                personalizados, un movimiento
+                ecológico en el cuidado del medio ambiente. A la vez, dar a conocer la importancia de este género literario
+                y expresión artística en nuestra sociedad y futuras generaciones. Todos nacemos algo poetas porque el poeta
+                nace y se hace cada día.
+                <br><br>
+            <h5>"La poesía es encontrar la esencia de la realidad, descubriendo el tiempo y sus interrogantes".
+                - Pedro Salinas </h5>
             </p>
 
         </section>
