--- a/formulario.html
+++ b/formulario.html
@@ -30,6 +30,9 @@
           <a class="nav-link colorletras" href="index.html#Productos">Productos</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link colorletras" href="Poesia.html">Poesía</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link colorletras" href="#">Formulario</a>
         </li>
         <li class="nav-item">
