--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
               <a class="nav-link colorletras" href="#Productos">Productos</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link colorletras" href="Poesia.html">Poesía</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link colorletras" href="formulario.html">Formulario</a>
             </li>
             <li class="nav-item">
